--- a/frontend/src/Modules/Modules.css
+++ b/frontend/src/Modules/Modules.css
@@ -3,8 +3,9 @@
     justify-content: center;
     height: auto;
     width: 40%;
-    margin-top: 3.5%;
-    margin-left: 24%;
+    margin-top: 60px;
+    margin-left: clamp(150px, 24%, 24%);
+    min-width: 100px;
 }
 
 .modules-one {
