--- a/frontend/src/Navbar/Navbar.css
+++ b/frontend/src/Navbar/Navbar.css
@@ -5,7 +5,7 @@
     min-width: 50%;
     width:100%;
     max-height: 10vh;
-    height: auto;
+    height: 60px; 
     max-height: 30vh;
     justify-content: flex-start;
     align-items: center;
@@ -26,9 +26,9 @@
 }
 
 .navbar-menu{
-    display:fixed;
+    display: absolute;
     justify-content: center;
-    position: fixed;
+    box-sizing: border-box;
     overflow: auto;
     z-index: 999;
     height:auto;
@@ -37,20 +37,22 @@
 
 .navbar-menu-items{
     background-color: rgb(255, 255, 255, 0.8);
-    margin-top: 1.5%;
-    max-width: 20vw;
-    width: 20vw;
-    min-height: 50%;
-    height: 100%;
-    padding: 2% 0% 1% 1%;
-    list-style-type: none;
-    justify-content: center;
+    box-sizing: border-box;
     position: fixed;
+    top: 45px;
+    max-width: 250px;
+    min-width: 150px;
+    height: 100%;
+    width: 20%;
+    padding: 2%;
+    list-style-type: none;
 }  
 
 #dark .navbar-menu-items, #dark label, #dark .nav-text a {
     background-color: rgb(88, 88, 88, 0.8);
     color: white;
+    min-height: 50%;
+    max-height: 90%;
 } 
 
 #dark .nav-text a:hover {
