--- a/frontend/src/ProfPage/ProfPage.css
+++ b/frontend/src/ProfPage/ProfPage.css
@@ -1,8 +1,23 @@
+.container{
+    margin-top: 60px;
+    margin-left: clamp(150px, 24%, 24%);
+    height:90vh;
+}
+
+.pw-text{
+    margin-top: 60px;
+    margin-left: clamp(150px, 24%, 24%);
+    margin-right: 50%;
+    margin-top: 5%;
+    height: 80vh;
+    min-width: 200px;
+}
+
 .pw-box{
-    margin-left: 10%;
+    margin-left: 30%;
+    margin-right: 50%;
     margin-top: 5%;
     height: auto;
-    display: flex;
     justify-content: center;
-    height: 100%;
+    height: 90vh;
 }
